--- a/7.1.0/angular/src/main/create-cv/create-cv.component.css
+++ b/7.1.0/angular/src/main/create-cv/create-cv.component.css
@@ -1,6 +1,6 @@
 #cv {
     /* width: 640px; */
-    position:fixed;
+    position: fixed;
     top: -20%;
     transform: scale(0.55);
 }
@@ -15,15 +15,29 @@
     max-width: 7rem;
 }
 
+.ng-select {
+    padding: 0px !important;
+}
+.sections {
+    border: 1px solid #D9D9D9;
+    border-radius: 20px;
+    padding: 1.5rem;
+    margin-bottom: 1rem;
+}
+::ng-deep.ng-select-container {
+    height: 3rem !important;
+    border: 1px solid #D9D9D9;
+}
+
 .bg-gray-100 {
     background-color: rgb(243 244 246) !important;
 }
 
 .form-label {
     color: #52525A;
-    font-size: 14px;
-    font-family: 'Poppins';
-    font-weight: 500 !important;
+    font-size: 16px;
+    font-family: 'Source Sans Pro';
+    font-weight: 600 !important;
 }
 
 .create-cv-header {
@@ -48,9 +62,11 @@
     border: 1px solid #5d25e7;
     border-radius: 5px;
 }
+
 .border-danger {
     border: 1px solid red !important;
 }
+
 .h-6 {
     height: 1.5rem;
 }
@@ -175,6 +191,7 @@
     background-color: #FDFDFD;
     border: 1px solid #312BC6;
 }
+
 .input-date {
     background-image: url("../../assets/img/calendar.svg");
     background-repeat: no-repeat;
