Update Interface for form of Create CV Screen

--- a/7.1.0/angular/src/main/create-cv/base-template/base-template.component.html
+++ b/7.1.0/angular/src/main/create-cv/base-template/base-template.component.html
@@ -480,7 +480,7 @@
         <div class="resume">
             <div class="left">
                 <div class="img_holder">
-                    <img [src]="dataCV.value.file" alt="picture">
+                    <img [src]="dataCV.value.file" alt="picture"p height="110">
                 </div>
                 <div class="contact_wrap pb">
                     <div class="title">
