--- a/7.1.0/angular/src/main/create-cv/create-cv.component.html
+++ b/7.1.0/angular/src/main/create-cv/create-cv.component.html
@@ -264,26 +264,92 @@
                                                         [searchable]="false"
                                                         placeholder="Chọn loại hình làm việc của bạn">
                                                     </ng-select>
-                                                    <ng-select [items]="skillTypes" class="form-control mb-4"
+                                                    <!-- <ng-select [items]="skillTypes" class="form-control mb-4"
                                                         bindLabel="name" bindValue="id" formControlName="skillType"
                                                         [searchable]="false" placeholder="Chọn loại kĩ năng của bạn">
-                                                    </ng-select>
+                                                    </ng-select> -->
                                                     <input type="text" placeholder="01/01/20"
-                                                    class="form-control input-date bg-gray-100 mb-4" formControlName="startDate"
-                                                    #dp="bsDatepicker" bsDatepicker
-                                                    [bsConfig]="{ containerClass: 'theme-dark-blue', dateInputFormat: 'DD/MM/YYYY',  returnFocusToInput: true, isAnimated: true }"
-                                                    required readonly>
+                                                        class="form-control input-date bg-gray-100 mb-4"
+                                                        formControlName="startDate" #dp="bsDatepicker" bsDatepicker
+                                                        [bsConfig]="{ containerClass: 'theme-dark-blue', dateInputFormat: 'DD/MM/YYYY',  returnFocusToInput: true, isAnimated: true }"
+                                                        required readonly>
                                                     <input type="text" placeholder="01/01/20"
-                                                    class="form-control input-date bg-gray-100 mb-4" formControlName="endDate"
-                                                    #dp="bsDatepicker" bsDatepicker
-                                                    [bsConfig]="{ containerClass: 'theme-dark-blue', dateInputFormat: 'DD/MM/YYYY',  returnFocusToInput: true, isAnimated: true }"
-                                                    required readonly>
+                                                        class="form-control input-date bg-gray-100 mb-4"
+                                                        formControlName="endDate" #dp="bsDatepicker" bsDatepicker
+                                                        [bsConfig]="{ containerClass: 'theme-dark-blue', dateInputFormat: 'DD/MM/YYYY',  returnFocusToInput: true, isAnimated: true }"
+                                                        required readonly>
+                                                    <input formControlName='industry' id="{{'industry'+i}}" type="text"
+                                                        class="form-control mb-4 bg-gray-100"
+                                                        placeholder="Nhập ngành nghề của bạn" />
+                                                    <textarea class="form-control bg-gray-100 mb-4"
+                                                        formControlName="description" rows="3"
+                                                        placeholder="Nhập mô tả công việc của bạn vào đây"></textarea>
                                                     <button type="button" class="btn btn-danger ml-auto"
                                                         (click)="deleteSectionExperiences(i)">Xóa kĩ năng</button>
                                                 </div>
                                             </div>
                                             <button type="button" class="btn btn-success mb-3 btn-lg btn-block"
                                                 (click)="addSectionExperiences()">Thêm kinh nghiệm</button>
+                                        </div>
+                                    </div>
+                                    <!-- Education -->
+                                    <div class="mb-3">
+                                        <div class="form-row mb-2">
+                                            <h3 class="font-weight-bold title-form">Học vấn</h3>
+                                            <button type="button" class="btn bg-white ml-auto"
+                                                style="border: 1px solid #D9D9D9;"
+                                                (click)="isCollapsedEducations = !isCollapsedEducations"
+                                                [attr.aria-expanded]="!isCollapsedEducations"
+                                                aria-controls="collapseBasic">
+                                                <i class='fas fa-angle-down'
+                                                    style='font-size:30px;color:rgb(150 150 150)'></i>
+                                            </button>
+                                        </div>
+                                        <div id="collapseBasic" [collapse]="isCollapsedEducations" [isAnimated]="true">
+                                            <div formArrayName="educations"
+                                                *ngFor="let t of educations.controls; let i = index">
+                                                <div class="row sections" [formGroupName]="i">
+                                                    <div class="col-md-3">
+                                                        <li class="mb-3"><span class="text-info">Học vấn
+                                                                {{i+1}}</span>
+                                                        </li>
+                                                    </div>
+                                                    <input formControlName='schoolName' id="{{'schoolName'+i}}" type="text"
+                                                        class="form-control mb-4 bg-gray-100"
+                                                        placeholder="Nhập tên trường của bạn" />
+                                                    <input formControlName='degree' id="{{'degree'+i}}" type="text"
+                                                        class="form-control mb-4 bg-gray-100"
+                                                        placeholder="Nhập bằng bạn được cấp" />
+                                                        <input formControlName='major' id="{{'major'+i}}" type="text"
+                                                        class="form-control mb-4 bg-gray-100"
+                                                        placeholder="Nhập chuyên ngành bạn học nếu có" />
+                                                    <textarea formControlName='activities' id="{{'activities'+i}}" rows="3"
+                                                        class="form-control mb-4 bg-gray-100"
+                                                        placeholder="Nhập các hoạt động của bạn"></textarea>
+                                                    <ng-select [items]="schoolTypes" class="form-control mb-4"
+                                                        bindLabel="name" bindValue="id" formControlName="schoolType"
+                                                        [searchable]="false"
+                                                        placeholder="Chọn cấp độ trường học của bạn">
+                                                    </ng-select>
+                                                    <input type="text" placeholder="01/01/20"
+                                                        class="form-control input-date bg-gray-100 mb-4"
+                                                        formControlName="startDate" #dp="bsDatepicker" bsDatepicker
+                                                        [bsConfig]="{ containerClass: 'theme-dark-blue', dateInputFormat: 'DD/MM/YYYY',  returnFocusToInput: true, isAnimated: true }"
+                                                        required readonly>
+                                                    <input type="text" placeholder="01/01/20"
+                                                        class="form-control input-date bg-gray-100 mb-4"
+                                                        formControlName="endDate" #dp="bsDatepicker" bsDatepicker
+                                                        [bsConfig]="{ containerClass: 'theme-dark-blue', dateInputFormat: 'DD/MM/YYYY',  returnFocusToInput: true, isAnimated: true }"
+                                                        required readonly>
+                                                    <textarea class="form-control bg-gray-100 mb-4"
+                                                        formControlName="description" rows="3"
+                                                        placeholder="Nhập mô tả của bạn vào đây"></textarea>
+                                                    <button type="button" class="btn btn-danger ml-auto"
+                                                        (click)="deleteSectionEducations(i)">Xóa học vấn</button>
+                                                </div>
+                                            </div>
+                                            <button type="button" class="btn btn-success mb-3 btn-lg btn-block"
+                                                (click)="addSectionEducations()">Thêm học vấn</button>
                                         </div>
                                     </div>
                                 </div>
