Update Form Create CV Continue

--- a/7.1.0/angular/src/main/create-cv/create-cv.component.html
+++ b/7.1.0/angular/src/main/create-cv/create-cv.component.html
@@ -281,6 +281,9 @@
                                                     <input formControlName='industry' id="{{'industry'+i}}" type="text"
                                                         class="form-control mb-4 bg-gray-100"
                                                         placeholder="Nhập ngành nghề của bạn" />
+                                                        <input formControlName='skills' id="{{'skills'+i}}" type="text"
+                                                        class="form-control mb-4 bg-gray-100"
+                                                        placeholder="Nhập các kĩ năng trong quá trình làm việc của bạn" />
                                                     <textarea class="form-control bg-gray-100 mb-4"
                                                         formControlName="description" rows="3"
                                                         placeholder="Nhập mô tả công việc của bạn vào đây"></textarea>
