--- a/7.1.0/angular/src/main/create-cv/base-template/base-template.component.html
+++ b/7.1.0/angular/src/main/create-cv/base-template/base-template.component.html
@@ -480,7 +480,7 @@
         <div class="resume">
             <div class="left">
                 <div class="img_holder">
-                    <img [src]="dataCV.value.file" alt="picture"p height="110">
+                    <img [src]="dataCV.value.file" alt="picture">
                 </div>
                 <div class="contact_wrap pb">
                     <div class="title">
@@ -565,59 +565,22 @@
                         </div>
                         <div class="exp_wrap">
                             <ul>
-                                <li>
+                                <li *ngFor="let experience of dataCV.value.experiences">
                                     <div class="li_wrap">
                                         <div class="date">
-                                            2018 - Present
+                                            {{experience.startDate | date: 'yyyy'}} - {{experience.endDate ? (experience.endDate | date: 'yyyy') : "Present"}}
                                         </div>
                                         <div class="info">
                                             <p class="info_title">
-                                                UI Team Lead
+                                                {{experience.position}} - {{experience.company}}
                                             </p>
                                             <p class="info_com">
-                                                Facebook
+                                                {{experience.location}}<br>
+                                               {{experience.industry}} - {{experience.skills}}
                                             </p>
                                             <p class="info_cont">
-                                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga
-                                                voluptatibus consequatur rem nostrum omnis! Architecto.
-                                            </p>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="li_wrap">
-                                        <div class="date">
-                                            2015 - 2018
-                                        </div>
-                                        <div class="info">
-                                            <p class="info_title">
-                                                UI Developer
-                                            </p>
-                                            <p class="info_com">
-                                                Amazon
-                                            </p>
-                                            <p class="info_cont">
-                                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga
-                                                voluptatibus consequatur rem nostrum omnis! Architecto.
-                                            </p>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="li_wrap">
-                                        <div class="date">
-                                            2014 - 2015
-                                        </div>
-                                        <div class="info">
-                                            <p class="info_title">
-                                                Junior UI Developer
-                                            </p>
-                                            <p class="info_com">
-                                                Coding Power
-                                            </p>
-                                            <p class="info_cont">
-                                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga
-                                                voluptatibus consequatur rem nostrum omnis! Architecto.
+                                               {{experience.description}}<br>
+                                               
                                             </p>
                                         </div>
                                     </div>
