--- a/7.1.0/angular/src/main/select-template/select-template.component.css
+++ b/7.1.0/angular/src/main/select-template/select-template.component.css
@@ -21,7 +21,7 @@ p.text-center {
     border-radius: 5px;
     background-color: #4314B6;
     color: white;
-    font-family: 'Poppins';
+    font-family: 'Source Sans Pro';
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
@@ -40,7 +40,7 @@ p.text-center {
     border-radius: 5px;
     background-color: #4314B6;
     color: white;
-    font-family: 'Poppins';
+    font-family: 'Source Sans Pro';
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
