--- a/7.1.0/angular/src/main/select-template/select-template.component.html
+++ b/7.1.0/angular/src/main/select-template/select-template.component.html
@@ -3,7 +3,7 @@
         <h1 class="text-center">Tạo cho mình một CV chuyên nghiệp</h1>
         <p class="text-center">Điền thông tin vào chỗ trống, chọn mẫu của chúng tôi và tải về chỉ trong vài phút.</p>
         <div class="container-fluid text-center">
-            <button type="button" class="btn btn-create">Tạo CV</button>
+            <button type="button" class="btn btn-create" [routerLink]="['../create-cv']">Tạo CV</button>
         </div>
 
         <div class="container-fluid mt-4 mb-2">
